--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "@iconify-json/simple-icons": "^1.2.23",
     "@nuxt/image": "1.9.0",
     "@nuxt/ui": "2.21.0",
+    "@nuxtjs/robots": "^5.2.2",
+    "@nuxtjs/seo": "^2.1.1",
+    "@nuxtjs/sitemap": "^7.2.4",
     "dayjs": "^1.11.13",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
+    "nuxt-schema-org": "^4.1.1",
+    "nuxt-seo-utils": "^6.0.8",
+    "nuxt-site-config": "^3.0.6",
     "vue": "latest",
     "vue-router": "latest",
     "vue3-lottie": "^3.3.1"
@@ -32,6 +38,8 @@
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
-    "typescript-eslint": "^8.23.0"
+    "typescript-eslint": "^8.23.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "^1.1.8"
   }
 }
