--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
+    "nuxt-lodash": "^2.5.3",
     "prettier": "^3.4.2",
     "typescript-eslint": "^8.23.0",
     "vite-plugin-compression": "^0.5.1",
