--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/seo": "^2.1.1",
     "@nuxtjs/sitemap": "^7.2.4",
     "@pinia/nuxt": "0.9.0",
+    "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
@@ -28,12 +29,14 @@
     "nuxt-site-config": "^3.0.6",
     "pinia": "^2.3.1",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.2"
   },
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@nuxt/eslint": "^1.0.0",
+    "@types/bcrypt": "^5.0.2",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-vue": "^9.32.0",
