--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@iconify-json/simple-icons": "^1.2.23",
+    "@nuxt/eslint": "^1.0.0",
     "@nuxt/image": "1.9.0",
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/robots": "^5.2.2",
@@ -24,10 +25,13 @@
     "dayjs": "^1.11.13",
     "gsap": "^3.12.7",
     "nuxt": "^3.15.4",
+    "nuxt-lodash": "^2.5.3",
     "nuxt-schema-org": "^4.1.1",
     "nuxt-seo-utils": "^6.0.8",
     "nuxt-site-config": "^3.0.6",
     "pinia": "^2.3.1",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.24.2"
@@ -35,17 +39,13 @@
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@nuxt/eslint": "^1.0.0",
     "@types/bcrypt": "^5.0.2",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.14.0",
-    "nuxt-lodash": "^2.5.3",
     "prettier": "^3.4.2",
-    "typescript-eslint": "^8.23.0",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-image-optimizer": "^1.1.8"
+    "typescript-eslint": "^8.23.0"
   },
   "overrides": {
     "vue": "latest"
